--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-transparent rounded-xl">
-		<div class="overflow-clip bg-white rounded-xl text-zinc-900 dark:bg-zinc-950 dark:text-white">
+		<div class="overflow-clip rounded-xl text-zinc-900 dark:text-white">
 			<div id="svelte" style="display: contents">%sveltekit.body%</div>
 		</div>
 	</body>
