fix: theming background colours issues with transparency

--- a/src/app.html
+++ b/src/app.html
@@ -7,9 +7,9 @@
 		<title>DesQTA</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-transparent rounded-xl">
+	<body data-sveltekit-preload-data="hover" class="rounded-xl">
 		<div class="overflow-clip rounded-xl text-zinc-900 dark:text-white">
 			<div id="svelte" style="display: contents">%sveltekit.body%</div>
 		</div>
 	</body>
-</html> 
+</html>
