--- a/src/app.html
+++ b/src/app.html
@@ -7,8 +7,8 @@
 		<title>DesQTA</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="rounded-xl">
-		<div class="overflow-clip rounded-xl text-zinc-900 dark:text-white">
+	<body data-sveltekit-preload-data="hover" class="rounded-xl overflow-clip">
+		<div class="text-zinc-900 dark:text-white">
 			<div id="svelte" style="display: contents">%sveltekit.body%</div>
 		</div>
 	</body>
