--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html class="" lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>DesQTA</title>
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover" class="rounded-xl overflow-clip">
-		<div class="text-zinc-900 dark:text-white">
-			<div id="svelte" style="display: contents">%sveltekit.body%</div>
-		</div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>DesQTA</title>
+    %sveltekit.head%
+  </head>
+  <body data-sveltekit-preload-data="hover" style="background: transparent">
+    <div class="text-zinc-900 dark:text-white h-screen w-screen" style="background: transparent">
+      <div id="svelte" style="display: contents; background: transparent">%sveltekit.body%</div>
+    </div>
+  </body>
 </html>
